   - Make it a bit clearer that the Treeparameter GUI version is decoupled
     from SpecTcl's version... for now.
April 22, 2005
   - Remove nulls from Xamine's log files and replace them with \n's instead.
April 29, 2005
   - TreeParameter save function didn't always get the dependencies right 
     causing error in loading.  Changed functions in SpectrumGenerator.tcl.
     Fix for bugzilla bug 173
May 2, 2005
   - Ensure filters get closed if active at program normal exit.
   - Encapsulate Xamine's gates and grobs inside a vector so that there's no 
     longer a fixed compilation limit on the number of gates /objects that
     can be defined.
   - Support GCC-3.4 compiler
May 11, 2005 
  - Added support for StripChart Spectra
  - Check the compiler type in configure to see if we can use -pedantic
     and do so if we can.
  - Debug -pedantic effects on compilation.
  - Fix defects nobody noticed in swrite -format binary/sread -format binary
    Probably introduced about SpecTcl-2.0  
May 12, 2005
  - Fixed attach -format .... error that probably only expresses on 
    gcc-3.x since nobody's seen/reported it but me until now
May 13, 2005
  - Fixed problem in Strip chart so that the parameter list is returned 
    in the correct order
--------------------------- End of Pre3 mods ------------
May 17, 2005
  - Set map to on by default in Xamine.
May 18, 2005
  - Add support for CTCLString::AppendElement(DFloat_t, const char* format)
    use it in parameter package's  parameter list of mapped parameters
    as a test.
  - Add support for CTCLString::AppendElement(long, const char* format)
  - Add support for mask equals gates as well as define the mask gate base class.
  - Add Support for "not mask" and "and mask" gates
May 23, 2005
  - Added support for "gate -list [pattern]" so that users can filter
    the results of the gate -list command
  - Added support for "spectrum -list [pattern]" so that users can filter
    the results of the spectrum -list command