@@ -443,40 +443,8 @@ CBindCommand::BindAll(CTCLInterpreter& rInterp, CTCLResult& rResult)
   return rPack.BindAll(rResult);
 }
 
-//////////////////////////////////////////////////////////////////////////
-//
-//  Function:
-//    Int_t BindByName(CTCLInterpreter& rInterp, CTCLResult& rResult,
-//		       int nArgs, char* pArgs[]);
-//  Operation Type:
-//    Utility:
-//
-Int_t
-CBindCommand::BindByName(CTCLInterpreter& rInterp, CTCLResult& rResult,
-			 int nArgs, char* pArgs[])
-{
-  // Binds a list of spectrum names to Displayer slots. 
-  //
-  // Formal Parameters:
-  //     CTCLInterpreter& rInterp:
-  //        TCL Interpreter executing the command.
-  //     CTCLResult& rResult:
-  //        Result string associated with this interpreter.
-  //     int nArgs, char* p Args[]:
-  //        Command line parameters.
-  // Returns:
-  //    TCL_OK      if bound.
-  //    TCL_ERROR   if some could not be bound.
-  //
 
 
-  vector<string> vNames;
-  CSpectrumPackage::GetNameList(vNames, nArgs, pArgs);
-
-  CSpectrumPackage& rPack = (CSpectrumPackage&)getMyPackage();
-
-  return rPack.BindList(rResult, vNames);
-}
 //////////////////////////////////////////////////////////////////////////
 //
 // Function
@@ -515,6 +483,34 @@ CBindCommand::BindByIdent(CTCLInterpreter& rInterp, CTCLResult& rResult,
   return rPack.BindList(rResult, vIdents);
 
 }
+
+Int_t
+CBindCommand::BindByName(CTCLInterpreter& rInterp, CTCLResult& rResult,
+			 int nArgs, char* pArgs[])
+{
+  // Binds a list of spectrum names to Displayer slots. 
+  //
+  // Formal Parameters:
+  //     CTCLInterpreter& rInterp:
+  //        TCL Interpreter executing the command.
+  //     CTCLResult& rResult:
+  //        Result string associated with this interpreter.
+  //     int nArgs, char* p Args[]:
+  //        Command line parameters.
+  // Returns:
+  //    TCL_OK      if bound.
+  //    TCL_ERROR   if some could not be bound.
+  //
+
+
+  std::vector<std::string> vNames;
+  CSpectrumPackage::GetNameList(vNames, nArgs, pArgs);
+
+  CSpectrumPackage& rPack = (CSpectrumPackage&)getMyPackage();
+
+  return rPack.BindList(rResult, vNames);
+}
+
 //////////////////////////////////////////////////////////////////////////
 //
 //  Function:   
@@ -563,15 +559,16 @@ CBindCommand::ListBindings(CTCLInterpreter& rInterp, CTCLResult& rResult, int nA
       return ListByXid(rInterp, rResult, nArgs, pArgs);
 
     case keNotSwitch:		// List given names.
-      return ListByName(rInterp, rResult, nArgs, pArgs);
+      //return ListByName(rInterp, rResult, nArgs, pArgs);
+      return ListAll(rInterp,rResult, pArgs[0]);
 
     default:			// Invalid switch in this context...
-      Usage(rResult);
-      return TCL_ERROR;
+      return ListAll(rInterp,rResult, pArgs[0]);
+
     }
   }
   else {
-    return ListAll(rInterp, rResult);
+    return ListAll(rInterp, rResult, "*");
   }
 
 }
@@ -583,13 +580,13 @@ CBindCommand::ListBindings(CTCLInterpreter& rInterp, CTCLResult& rResult, int nA
 //   Utility:
 //
 Int_t
-CBindCommand::ListAll(CTCLInterpreter& rInterp, CTCLResult& rResult)
+CBindCommand::ListAll(CTCLInterpreter& rInterp, CTCLResult& rResult, const char* pattern)
 {
   // List all spectrum bindings.
   //
 
   CSpectrumPackage& rPack = (CSpectrumPackage&)getMyPackage();
-  rPack.ListAllBindings(rResult);
+  rPack.ListAllBindings(rResult, pattern);
   return TCL_OK;
 
 }
