@@ -34,7 +34,7 @@ href="../obtaining_and_installing.htm">Obtaining and Installing</a></p>
 <h2>Syntax</h2>
 
 <pre>clear -all
-clear <em>name</em>   [<em>name...</em>]
+clear <em>pattern</em>   
 clear -id <em>id</em> [<em>id...</em>]</pre>
 
 <h2>Synopsis</h2>
@@ -55,9 +55,9 @@ can be selectively cleared or all spectra can be cleared.</p>
 
 <p>Clears all spectra known to SpecTcl.</p>
 
-<h3>clear <em>name </em>[<em>name...</em>]</h3>
+<h3>clear <em>pattern </em></h3>
 
-<p>Clears all of the named spectra.</p>
+<p>Clears all of the spectra whose name matches pattern.</p>
 
 <h3>clear -id <em>id</em> [<em>id...</em>]</h3>
 
